# RegulatoryKB

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  REGULATORY_CONTEXT.md  Regulatory_KB_PRD.docx.md  acquisition_list.csv  document_list.csv  gap_report.csv  launch_ui.bat  launch_ui.ps1  pyproject.toml  requirements.txt  run_intel_daily.bat  run_intel_imap.bat  run_intel_monthly.bat  run_intel_weekly.bat  setup.py  setup_daily_ingest.bat
config/: config.yaml
diagnostics/: 2026-05-10-pii-sweep.md  2026-05-17-pii-sweep.md  2026-05-24-pii-sweep.md  2026-05-31-pii-sweep.md
docs/: PRD_Regulatory_Intelligence_Agent.md
docs/plans/: 2026-02-17-conversational-agent-design.md
scripts/: fix-pythonpath.bat  fix-service-account.bat  install-all-deps-global.bat  install-deps-global.bat  install-service-v2.bat  install-service.bat  run-web.bat  setup_daily_ingest.ps1  uninstall-service.bat
scripts/regkb/: __init__.py  __main__.py  acquisition_list.py  app.py  cli.py  config.py  database.py  diff.py  downloader.py  extraction.py  gap_analysis.py  importer.py  notebooklm_export.py  reference_docs.py  search.py  services.py  version_diff.py  version_tracker.py
scripts/regkb/commands/: core.py  intel.py  lifecycle.py
scripts/regkb/intelligence/: __init__.py  analyzer.py  dedup.py  digest_tracker.py  emailer.py  fetcher.py  filter.py  reply_handler.py  scheduler.py  summarizer.py  url_resolver.py  web_search_resolver.py
scripts/regkb/intelligence/sources/: __init__.py  base.py  eu_rss.py  fda_rss.py  mhra_rss.py  newsletter.py  registry.py
scripts/regkb/scheduler/: __init__.py  error_handler.py  jobs.py  setup.py
scripts/regkb/telegram/: __init__.py  auth.py  bot.py  callbacks.py  formatters.py  handlers.py  keyboards.py  llm_handler.py  notifications.py  search_handler.py
scripts/regkb/web/: __init__.py  dependencies.py  health.py  lifespan.py  main.py
scripts/regkb/web/routes/: __init__.py  admin.py  browse.py  diff.py  documents.py  gaps.py  intel.py  search.py  versions.py
scripts/regkb/web/templates/: admin_batch.html  base.html  browse.html  diff.html  document_add.html  document_detail.html  gaps.html  gaps_detail.html  intel.html  intel_digests.html  intel_pending.html  search.html  settings.html  statistics.html  versions.html
tests/: conftest.py  test_config.py  test_database.py  test_dedup.py  test_diff.py  test_downloader.py  test_extraction.py  test_gap_analysis.py  test_health.py  test_lifespan.py  test_llm_handler.py  test_scheduler_jobs.py  test_search_handler.py  test_source_adapters.py  test_telegram_auth.py  test_telegram_formatters.py  test_telegram_handlers.py  test_version_tracker.py  test_web_search_resolver.py
(+4 files in other folders)
